@@ -128,9 +128,7 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
         self.cache = AptCache()
         self.cache.connect("cache-broken", self._on_apt_cache_broken)
         self.backend = get_install_backend()
-        self.backend.connect("transaction-started", self._on_transaction_started)
         self.backend.connect("transaction-finished", self._on_transaction_finished)
-        self.backend.connect("transaction-stopped", self._on_transaction_stopped)
         self.backend.connect("channels-changed", self.on_channels_changed)
         # xapian
         pathname = os.path.join(xapian_base_path, "xapian")
@@ -196,8 +194,6 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
         self.available_pane.app_details.connect("selected", 
                                                 self.on_app_details_changed,
                                                 VIEW_PAGE_AVAILABLE)
-        self.available_pane.app_view.connect("application-selected",
-                                             self.on_app_selected)
         self.available_pane.app_details.connect("application-request-action", 
                                                 self.on_application_request_action)
         self.available_pane.app_view.connect("application-request-action", 
@@ -216,8 +212,6 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
         self.channel_pane.app_details.connect("selected", 
                                                 self.on_app_details_changed,
                                                 VIEW_PAGE_CHANNEL)
-        self.channel_pane.app_view.connect("application-selected",
-                                             self.on_app_selected)
         self.channel_pane.app_details.connect("application-request-action", 
                                               self.on_application_request_action)
         self.channel_pane.app_view.connect("application-request-action", 
@@ -236,8 +230,6 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
         self.installed_pane.app_details.connect("selected", 
                                                 self.on_app_details_changed,
                                                 VIEW_PAGE_INSTALLED)
-        self.installed_pane.app_view.connect("application-selected",
-                                             self.on_app_selected)
         self.installed_pane.app_details.connect("application-request-action", 
                                                 self.on_application_request_action)
         self.installed_pane.app_view.connect("application-request-action", 
@@ -353,18 +345,13 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
             self.db.reopen()
 
     def on_app_details_changed(self, widget, app, page):
-        self.update_app_status_menu()
         self.update_status_bar()
 
     def on_app_list_changed(self, pane, new_len, page):
         self._available_items_for_page[page] = new_len
         if self.view_manager.get_active_view() == page:
             self.update_app_list_view()
-            self.update_app_status_menu()
             self.update_status_bar()
-
-    def on_app_selected(self, widget, app):
-        self.update_app_status_menu()
 
     def on_window_main_delete_event(self, widget, event):
         if hasattr(self, "glaunchpad"):
@@ -413,7 +400,6 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
         self.view_manager.set_active_view(view_id)
         self.update_app_list_view(channel)
         self.update_status_bar()
-        self.update_app_status_menu()
 
     def on_viewswitcher_resized(self, widget, allocation):
         self.view_switcher.width = allocation.width
@@ -495,6 +481,60 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
         return iconinfo.get_filename()
 
     # Menu Items
+    def on_menu_file_activate(self, menuitem):
+        """Enable/disable install/remove"""
+        self._logger.debug("on_menu_file_activate")
+        # check if we have a pkg for this page
+        app = None
+        if self.active_pane:
+            app = self.active_pane.get_current_app()
+        if app is None:
+            self.menuitem_install.set_sensitive(False)
+            self.menuitem_remove.set_sensitive(False)
+            return False
+        # wait for the cache to become ready (if needed)
+        if not self.cache.ready:
+            glib.timeout_add(100, lambda: self.on_menu_file_activate(menuitem))
+            return False
+        # update menu items
+        pkg_state = None
+        error = None
+        # FIXME:  Use a gtk.Action for the Install/Remove/Buy/Add Source/Update Now action
+        #         so that all UI controls (menu item, applist view button and appdetails
+        #         view button) are managed centrally:  button text, button sensitivity,
+        #         and callback method
+        # FIXME:  Add buy support here by implementing the above
+        if self.active_pane.app_details:
+            if self.active_pane.app_details.appdetails:
+                pkg_state = self.active_pane.app_details.appdetails.pkg_state
+                error = self.active_pane.app_details.appdetails.error
+        if self.active_pane.app_view.is_action_in_progress_for_selected_app():
+            self.menuitem_install.set_sensitive(False)
+            self.menuitem_remove.set_sensitive(False)
+        elif pkg_state == PKG_STATE_UPGRADABLE or pkg_state == PKG_STATE_REINSTALLABLE and not error:
+            self.menuitem_install.set_sensitive(True)
+            self.menuitem_remove.set_sensitive(True)
+        elif pkg_state == PKG_STATE_INSTALLED:
+            self.menuitem_install.set_sensitive(False)
+            self.menuitem_remove.set_sensitive(True)
+        elif pkg_state == PKG_STATE_UNINSTALLED and not error:
+            self.menuitem_install.set_sensitive(True)
+            self.menuitem_remove.set_sensitive(False)
+        elif (not pkg_state and 
+              not self.active_pane.is_category_view_showing() and 
+              app.pkgname in self.cache and 
+              not self.active_pane.app_view.is_action_in_progress_for_selected_app() and
+              not error):
+            pkg = self.cache[app.pkgname]
+            installed = bool(pkg.installed)
+            self.menuitem_install.set_sensitive(not installed)
+            self.menuitem_remove.set_sensitive(installed)
+        else:
+            self.menuitem_install.set_sensitive(False)
+            self.menuitem_remove.set_sensitive(False)
+        # return False to ensure that a possible glib.timeout_add ends
+        return False
+
     def on_menuitem_launchpad_private_ppas_activate(self, menuitem):
         self.glaunchpad = GLaunchpad()
         self.glaunchpad.connect("login-successful", self._on_lp_login)
@@ -531,6 +571,7 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
                            self.menuitem_redo,
                            self.menuitem_cut, 
                            self.menuitem_copy,
+                           self.menuitem_copy_web_link,
                            self.menuitem_paste,
                            self.menuitem_delete,
                            self.menuitem_select_all,
@@ -557,6 +598,11 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
             # search sensitive iff searchentry is not focused
             else:
                 self.menuitem_search.set_sensitive(True)
+        app = None
+        if self.active_pane:
+            app = self.active_pane.get_current_app()
+            if app and app.pkgname in self.cache:
+                self.menuitem_copy_web_link.set_sensitive(True)
 
     def on_menuitem_undo_activate(self, menuitem):
         self.active_pane.searchentry.undo()
@@ -643,13 +689,11 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
         self.available_pane.nav_history.nav_back()
         self.available_pane._status_text = ""
         self.update_status_bar()
-        self.update_app_status_menu()
         
     def on_navhistory_forward_action_activate(self, navhistory_forward_action):
         self.available_pane.nav_history.nav_forward()
         self.available_pane._status_text = ""
         self.update_status_bar()
-        self.update_app_status_menu()
             
     def _ask_and_repair_broken_cache(self):
         # wait until the window window is available
@@ -662,20 +706,11 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
     def _on_apt_cache_broken(self, aptcache):
         self._ask_and_repair_broken_cache()
 
-    def _on_transaction_started(self, backend):
-        self.menuitem_install.set_sensitive(False)
-        self.menuitem_remove.set_sensitive(False)
-            
     def _on_transaction_finished(self, backend, result):
         """ callback when an application install/remove transaction 
             (or a cache reload) has finished 
         """
         self.cache.open()
-        self.update_app_status_menu()
-
-    def _on_transaction_stopped(self, backend, pkgname):
-        """ callback when an application install/remove transaction has stopped """
-        self.update_app_status_menu()
 
     def on_channels_changed(self, backend, res):
         """ callback when the set of software channels has changed """
@@ -685,7 +720,6 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
             # refresh the available_pane views to reflect any changes
             self.available_pane.refresh_apps()
             self.available_pane.update_app_view()
-            self.update_app_status_menu()
             self.update_status_bar()
 
     # helper
@@ -693,66 +727,6 @@ class SoftwareCenterApp(SimpleGtkbuilderApp):
     def run_update_cache(self):
         """update the apt cache (e.g. after new sources where added """
         self.backend.reload()
-
-    def update_app_status_menu(self):
-        """Helper that updates the 'File' and 'Edit' menu to enable/disable
-           install/remove and Copy/Copy weblink
-        """
-        self._logger.debug("update_app_status_menu")
-        # check if we have a pkg for this page
-        app = None
-        if self.active_pane:
-            app = self.active_pane.get_current_app()
-        if app is None:
-            self.menuitem_install.set_sensitive(False)
-            self.menuitem_remove.set_sensitive(False)
-            self.menuitem_copy_web_link.set_sensitive(False)
-            return False
-        # wait for the cache to become ready (if needed)
-        if not self.cache.ready:
-            glib.timeout_add(100, lambda: self.update_app_status_menu())
-            return False
-        # update menu items
-        pkg_state = None
-        error = None
-        # FIXME:  Use a gtk.Action for the Install/Remove/Buy/Add Source/Update Now action
-        #         so that all UI controls (menu item, applist view button and appdetails
-        #         view button) are managed centrally:  button text, button sensitivity,
-        #         and callback method
-        # FIXME:  Add buy support here by implementing the above
-        if self.active_pane.app_details.appdetails:
-            pkg_state = self.active_pane.app_details.appdetails.pkg_state
-            error = self.active_pane.app_details.appdetails.error
-        if self.active_pane.app_view.is_action_in_progress_for_selected_app():
-            self.menuitem_install.set_sensitive(False)
-            self.menuitem_remove.set_sensitive(False)
-        elif pkg_state == PKG_STATE_UPGRADABLE or pkg_state == PKG_STATE_REINSTALLABLE and not error:
-            self.menuitem_install.set_sensitive(True)
-            self.menuitem_remove.set_sensitive(True)
-        elif pkg_state == PKG_STATE_INSTALLED:
-            self.menuitem_install.set_sensitive(False)
-            self.menuitem_remove.set_sensitive(True)
-        elif pkg_state == PKG_STATE_UNINSTALLED and not error:
-            self.menuitem_install.set_sensitive(True)
-            self.menuitem_remove.set_sensitive(False)
-        elif (not pkg_state and 
-              not self.active_pane.is_category_view_showing() and 
-              app.pkgname in self.cache and 
-              not self.active_pane.app_view.is_action_in_progress_for_selected_app() and
-              not error):
-            pkg = self.cache[app.pkgname]
-            installed = bool(pkg.installed)
-            self.menuitem_install.set_sensitive(not installed)
-            self.menuitem_remove.set_sensitive(installed)
-            self.menuitem_copy_web_link.set_sensitive(True)
-        else:
-            self.menuitem_install.set_sensitive(False)
-            self.menuitem_remove.set_sensitive(False)
-            self.menuitem_copy_web_link.set_sensitive(False)
-        if pkg_state:
-            self.menuitem_copy_web_link.set_sensitive(True)
-        # return False to ensure that a possible glib.timeout_add ends
-        return False
 
     def update_status_bar(self):
         "Helper that updates the status bar"
